--- a/package.json
+++ b/package.json
@@ -1,55 +1,70 @@
 {
-  "name": "gatsby-starter-default",
-  "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "dependencies": {
-    "@tailwindcss/typography": "^0.4.0",
-    "gatsby": "^3.4.1",
-    "gatsby-plugin-catch-links": "^3.4.0",
-    "gatsby-plugin-gatsby-cloud": "^2.4.1",
-    "gatsby-plugin-image": "^1.4.0",
-    "gatsby-plugin-manifest": "^3.4.0",
-    "gatsby-plugin-offline": "^4.4.0",
-    "gatsby-plugin-react-helmet": "^4.4.0",
-    "gatsby-plugin-sharp": "^3.4.1",
-    "gatsby-remark-images": "^5.1.0",
-    "gatsby-source-filesystem": "^3.4.0",
-    "gatsby-transformer-remark": "^4.1.0",
-    "gatsby-transformer-sharp": "^3.4.0",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "typescript": "^4.2.4"
-  },
-  "devDependencies": {
-    "@types/react-helmet": "^6.1.1",
-    "autoprefixer": "^10.2.5",
-    "gatsby-plugin-postcss": "^4.4.0",
-    "postcss": "^8.2.13",
-    "prettier": "2.2.1",
-    "tailwindcss": "^2.1.2"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "0BSD",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+	"name": "gatsby-starter-default",
+	"private": true,
+	"description": "A simple starter to get up and developing quickly with Gatsby",
+	"version": "0.1.0",
+	"author": "Abdul Mateen",
+	"dependencies": {
+		"@apollo/client": "^3.3.19",
+		"@tailwindcss/typography": "^0.4.0",
+		"date-fns": "^2.22.1",
+		"dotenv": "^8.6.0",
+		"gatsby": "^3.4.1",
+		"gatsby-plugin-catch-links": "^3.4.0",
+		"gatsby-plugin-gatsby-cloud": "^2.4.1",
+		"gatsby-plugin-graphql-codegen": "^3.0.0",
+		"gatsby-plugin-image": "^1.4.0",
+		"gatsby-plugin-manifest": "^3.4.0",
+		"gatsby-plugin-offline": "^4.4.0",
+		"gatsby-plugin-react-helmet": "^4.4.0",
+		"gatsby-plugin-react-svg": "^3.0.1",
+		"gatsby-plugin-sharp": "^3.4.1",
+		"gatsby-remark-images": "^5.1.0",
+		"gatsby-source-filesystem": "^3.4.0",
+		"gatsby-source-graphql": "^3.6.0",
+		"gatsby-transformer-remark": "^4.1.0",
+		"gatsby-transformer-sharp": "^3.4.0",
+		"isomorphic-fetch": "^3.0.0",
+		"prop-types": "^15.7.2",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
+		"react-helmet": "^6.1.0",
+		"react-rating": "^2.0.5",
+		"typescript": "^4.3.2"
+	},
+	"devDependencies": {
+		"@graphql-codegen/cli": "^1.21.5",
+		"@graphql-codegen/introspection": "^1.18.2",
+		"@graphql-codegen/typescript": "^1.22.1",
+		"@graphql-codegen/typescript-operations": "^1.18.0",
+		"@graphql-codegen/typescript-react-apollo": "^2.2.5",
+		"@types/react-helmet": "^6.1.1",
+		"autoprefixer": "^10.2.5",
+		"gatsby-plugin-postcss": "^4.4.0",
+		"postcss": "^8.2.13",
+		"prettier": "2.2.1",
+		"tailwindcss": "^2.1.2",
+		"yarn-upgrade-all": "^0.5.4"
+	},
+	"keywords": [
+		"gatsby"
+	],
+	"license": "0BSD",
+	"scripts": {
+		"build": "gatsby build",
+		"develop": "gatsby develop",
+		"format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+		"start": "npm run develop",
+		"serve": "gatsby serve",
+		"clean": "gatsby clean",
+		"codegen": "graphql-codegen --config codegen.yml",
+		"codegen:watch": "graphql-codegen --config codegen.yml -w"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/gatsbyjs/gatsby-starter-default"
+	},
+	"bugs": {
+		"url": "https://github.com/gatsbyjs/gatsby/issues"
+	}
 }
